2003-12-10  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Fixed a problem in the dep engine where if a dep was
	installed but it's deb file was missing, fink would fail.

2003-12-10  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Engine.pm: If the package name is being truncated in list/apropos
	print an ellipses ("...") so that the user knows about it.

	* Selfupdate.pm: Don't try to su or chown to an undefined $username.
	
2003-12-09  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Validation.pm: Rearranged the list of allowed fields and added
	some comments to make it easier to compare this list to the
	packaging manual.

2003-12-08  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Adding "fink splitoffs", shows parent and splitoffs in a
	package. Adding "fink showparent" which will return the parent package
	 of a package.
	* PkgVersion.pm: Adding sub get_splitoffs() has two switches, to
	include self in list and include parent.

2003-12-08  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Properly fixed essential and builddependsonly checks in
	cmd_remove.

2003-12-07  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: Added force switch to resolve_depends so duplicate
	WARNINGS for the same depend won't show twice on sub depend checks.
	* Engine.pm: Added $forceoff switch to resolve_depends calls.

2003-12-04  Daniel Macks <dmacks@netspace.org>

	* Services.pm: Fixed latest_version to continue past (and ignore)
	undef values rather than ignoring the rest of the passed list.
	* Services.pm: Finished PODifying the docs.

2003-12-04  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm: Add file-spec-pm, test-harness-pm, and test-simple-pm
	when bootstrapping under perl 5.6.x.

2003-12-04  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: Fixed double building issue in my dep check code. And
	removed a few more prints on secondary builds.
